syntax = "proto3";
package messages;

message RegistrationCredentials {
    string email = 1;
    string password = 2;
    string hostname = 3;
    bytes public_key = 4;
    bytes machine_id = 5;
}

message SignedMetrics {
    bytes signature = 1;
    bytes machine_id = 2;
    optional string avs_name = 3;
    repeated Metrics metrics = 4;
}

message Metrics {
    string name = 1;
    double value = 2;
    repeated MetricsAttribute attributes = 3;
}

message MetricsAttribute {
    string name = 1;
    string value = 2;
}

message SignedLog {
    bytes signature =  1;
    bytes machine_id = 2;
    string avs_name = 3;
    string log = 4;
}

message NodeTypeQuery {
    string image_name = 1;
    string image_digest = 2;
    string container_name = 3;
}

message NodeTypeQueries {
    repeated NodeTypeQuery node_types = 1;
}

message NodeType {
    string container_name = 1;
    string node_type = 2;
}

message NodeTypes {
    repeated NodeType node_types = 1;
}

message Digests {
    repeated string digests = 1;
}

message SignedNameChange {
    bytes signature = 1;
    bytes machine_id = 2;
    string old_name = 3;
    string new_name = 4;
}

message SignedMachineData {
    bytes signature = 1;
    bytes machine_id = 2;
    MachineData machine_data = 3;
}

message MachineData {
    string ivynet_version = 1;
    string uptime = 2;
    string cpu_usage = 3;
    string cpu_cores = 4;
    string memory_used = 5;
    string memory_free = 6;
    string memory_total = 7;
    string disk_used_total = 8;
    repeated string free_disk = 9;
    repeated string used_disk = 10;
    
}

message SignedNodeData {
    bytes signature = 1;
    bytes machine_id = 2;
    NodeData node_data = 4;
}

message NodeData {
    string name = 1;
    string node_type = 2;
    string manifest = 3;
    bool metrics_alive = 4;
}

message SignedNodeDataV2 {
    bytes signature = 1;
    bytes machine_id = 2;
    NodeDataV2 node_data = 4;
}

message NodeDataV2 {
    string name = 1;
    optional string node_type = 2;
    optional string manifest = 3;
    optional bool metrics_alive = 4;
    optional bool node_running = 5;
}
